umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_u+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["U#c+4#u2"] :bonds [] :charge 4 :spin "#u2 #s3"}
    :success true}
  :counts {
    :output {:atoms ["U#c+4#n"] :bonds [] :charge 4 :spin "#u0 #s1"}
    :success true}}
