umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_u+5.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "U#c+5#u"} :bonds [] :charge 5 :spin "#u1 #s2"}} :counts {:success true :output {:atoms {"0" "U#c+5#u"} :bonds [] :charge 5 :spin "#u1 #s2"}}}
