umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_u+6.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {:output {:atoms ["U#c+6"] :bonds [] :charge 6 :spin "#u0#s1"} :success true}
  :counts {:output {:atoms ["U#c+6"] :bonds [] :charge 6 :spin "#u0#s1"} :success true}}
