umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_v+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["V#c+3#u2"] :bonds [] :charge 3 :spin "#u2 #s3"}
    :success true}
  :counts {
    :output {:atoms ["V#c+3#n"] :bonds [] :charge 3 :spin "#u0 #s1"}
    :success true}}
