umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_yb+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["Yb#c+2#n7"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["Yb#c+2#n7"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["Yb#c+2#n7"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["Yb#c+2#n7"] :bonds []} :success true :tie-breaks []}}
