umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_yb+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Yb#c+3#n6#u"] :bonds [] :charge 3 :spin "#u1 #s2"}} :counts {:success true :output {:atoms ["Yb#c+3#n6#u"] :bonds [] :charge 3 :spin "#u1 #s2"}}}
